--- a/wms-frontend/src/index.css
+++ b/wms-frontend/src/index.css
@@ -22,3 +22,24 @@ body {
 .primary-border {
   border: #fe8216;
 }
+
+.scroll-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-hide {
+  scrollbar-width: none;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.animate-slide-up {
+  animation: slideUp ease-out forwards;
+}
